deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identifier-producer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /identifier
spec:
  rules:
    - host: api.bennu.cl
      http:
        paths:
          - path: /v2/identifier
            backend:
              serviceName: identifier-producer
              servicePort: http
